--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
 			href="https://github.com/konsav/email-templates/"><img border="0" vspace="0" hspace="0"
-			src="file:///Users/samplews/Desktop/background.png"
+			src="http://the.codeite.net/asaf-first-release-email/background.png"
 			alt="Please enable images to view this content" title="Hero Image"
 			width="560" style="
 			width: 100%;
@@ -136,7 +136,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="file:///Users/samplews/Desktop/pinball.png"
+					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
@@ -162,7 +162,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="file:///Users/samplews/Desktop/pinball.png"
+					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
@@ -188,7 +188,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="file:///Users/samplews/Desktop/pinball.png"
+					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
