--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@ a, a:hover {
 			padding-bottom: 25px;
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
-      If you are interested to know a bit more, please do read our release note.</td>
-      </td>
-      All the best,</td>
-      Team Pinball</td>
+      If you are interested to know a bit more, please do read our release note.</br>
+	    </br>
+      All the best,</br>
+      Team Pinball</br>
 
 		</td>
 	</tr>
