--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
 			href="https://github.com/konsav/email-templates/"><img border="0" vspace="0" hspace="0"
-			src="http://the.codeite.net/asaf-first-release-email/background.png"
+			src="http://the.codeite.net/asaf-first-release-email/background.jpg"
 			alt="Please enable images to view this content" title="Hero Image"
 			width="560" style="
 			width: 100%;
@@ -79,9 +79,9 @@ a, a:hover {
 			padding-top: 25px;
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
-      <p>Good afternoon folks,</p>
-      <p>&nbsp;</p>
-      <p>We are delighted to announce that from today customers can now shop ASAF sofas on 1JL.</p>
+			Good afternoon folks,</br>
+			</br>
+      We are delighted to announce that from today customers can now shop ASAF sofas on 1JL.</br>
 		</td>
 	</tr>
 
