--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@ a, a:hover {
 			padding-bottom: 25px;
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
-      If you are interested to know a bit more, please do read <a herf="https://docs.google.com/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit#slide=id.g2932778189_0_123">our release note</a>.</br>
+      If you are interested to know a bit more, please do read <a target="_blank" style="text-decoration: underline;
+			color: #000000; font-family: sans-serif; font-size: 17px; font-weight: 400;" href="https://docs.google.com/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit#slide=id.g2932778189_0_123">our release note</a>.</br>
 	    </br>
       All the best,</br>
       Team Pinball</br>
