--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
 			href="https://docs.google.com/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit#slide=id.g2932778189_0_123"><img border="0" vspace="0" hspace="0"
-			src="http://the.codeite.net/asaf-first-release-email/background.jpg"
+			src="https://jl-codeite.github.io/asaf-first-release-email/background.jpg"
 			alt="Please enable images to view this content" title="Hero Image"
 			width="560" style="
 			width: 100%;
@@ -126,7 +126,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
+					src="https://jl-codeite.github.io/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
@@ -152,7 +152,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
+					src="https://jl-codeite.github.io/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
@@ -178,7 +178,7 @@ a, a:hover {
 					padding-right: 20px;"><img
 				border="0" vspace="0" hspace="0" style="padding: 0; margin: 0; outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; border: none; display: block;
 					color: #000000;"
-					src="http://the.codeite.net/asaf-first-release-email/pinball.png"
+					src="https://jl-codeite.github.io/asaf-first-release-email/pinball.png"
 					alt="H" title="Highly compatible"
 					width="50" height="50"></td>
 
