--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a, a:hover {
 	<tr>
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0;
 			padding-top: 20px;" class="hero"><a target="_blank" style="text-decoration: none;"
-			href="https://johnlewis.slack.com/files/U6XCJCPEV/F7TDV1ELR/pinball_v1_release_note"><img border="0" vspace="0" hspace="0"
+			href="https://docs.google.com/a/johnlewis.co.uk/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit?usp=sharing"><img border="0" vspace="0" hspace="0"
 			src="https://jl-codeite.github.io/asaf-first-release-email/background.jpg"
 			alt="Please enable images to view this content" title="Hero Image"
 			width="560" style="
@@ -91,11 +91,11 @@ a, a:hover {
 		<td align="center" valign="top" style="border-collapse: collapse; border-spacing: 0; margin: 0; padding: 0; padding-left: 6.25%; padding-right: 6.25%; width: 87.5%;
 			padding-top: 25px;
 			padding-bottom: 5px;" class="button"><a
-			href="https://johnlewis.slack.com/files/U6XCJCPEV/F7TDV1ELR/pinball_v1_release_note" target="_blank" style="text-decoration: underline;">
+			href="https://docs.google.com/a/johnlewis.co.uk/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit?usp=sharing" target="_blank" style="text-decoration: underline;">
 				<table border="0" cellpadding="0" cellspacing="0" align="center" style="max-width: 240px; min-width: 120px; border-collapse: collapse; border-spacing: 0; padding: 0;"><tr><td align="center" valign="middle" style="padding: 12px 24px; margin: 0; text-decoration: underline; border-collapse: collapse; border-spacing: 0; border-radius: 4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; -khtml-border-radius: 4px;"
 					bgcolor="#E9703E"><a target="_blank" style="text-decoration: underline;
 					color: #FFFFFF; font-family: sans-serif; font-size: 17px; font-weight: 400; line-height: 120%;"
-					href="https://johnlewis.slack.com/files/U6XCJCPEV/F7TDV1ELR/pinball_v1_release_note">
+					href="https://docs.google.com/a/johnlewis.co.uk/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit?usp=sharing">
 						View release note
 					</a>
 			</td></tr></table></a>
@@ -207,7 +207,7 @@ a, a:hover {
 			color: #000000;
 			font-family: sans-serif;" class="paragraph">
       If you are interested to know a bit more, please do read <a target="_blank" style="text-decoration: underline;
-			color: #000000; font-family: sans-serif; font-size: 17px; font-weight: 400;" href="https://johnlewis.slack.com/files/U6XCJCPEV/F7TDV1ELR/pinball_v1_release_note">our release note</a>.</br>
+			color: #000000; font-family: sans-serif; font-size: 17px; font-weight: 400;" href="https://docs.google.com/a/johnlewis.co.uk/presentation/d/1944xqFMagOevmqjr4GSMyE-HTPp6cjHLwEAYUrA_vtw/edit?usp=sharing">our release note</a>.</br>
 	    </br>
       All the best,</br>
       Team Pinball</br>
